=== 4.0.4 2020-10-29
- Actually bump User-Agent (which hadn't been bumped since 4.0.0)

=== 4.0.3 2020-10-26
* Change `PUT` requests to be properly-encoded
* Handle null previous_attributes

=== 4.0.2 2020-03-30

* Merged pull request #49
* Added EvenTest file
* Fixed test cases on EasyPostTest (testPickup, testShipmentWithPostageLabelWithOptions )
* Fixed intermittent WebHook callback event containing "previous_attributes": null

=== 4.0.1 2018-08-28

* Add labelFile for postage_label_inline option

=== 4.0.0 2018-03-15

* Added additional fields to Error object used in Address verification
* Added delivery details to Address verification
* Changed message field of ShipmentMessage to support non-string values
* Fixed currency field of Rate to handle null
* Fixed Report params to include start_date and end_date in the top-level JSON, as expected by the reports endpoint

=== 3.4.1 2018-03-09

* Added createdAt, updatedAt and fees fields on all top-level objects
* Added batchId to Shipment objects

=== 3.4.0 2017-12-07

* Updated version of junit from 4.1.10 to 4.1.12
* Updated version of maven-compiler-plugin from 1.5 to 1.8
* Added tests for new shipment option payment

=== 3.3.5 2017-05-23

* Added orderId field to Shipments
* Allow Reports to be retrieved without passing a type


=== 3.3.4 2017-03-10

* Updated X-EasyPost-Client-User-Agent to X-Client-User-Agent
* Added additional values to CarrierDetail
* Added statusDetail field to Trackers and TrackingDetails


=== 3.3.3 2017-02-14

* Added newRates method to Orders to refresh rates


=== 3.3.2 2017-01-24

* Allow Webhook update and index to be called with empty params


=== 3.3.1 2017-01-19

* Fixed ScanForm create


=== 3.3.0 2017-01-17

* Added basic CRUD methods for Webhooks


=== 3.2.1 2017-01-09

* Fixed bug in Maven test dependencies


=== 3.2.0 2017-01-04

* Changed Shipment and Order options from being a Map<String, String> to Map<String, Object> to support new non-string options

